--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,26 +1,16 @@
-/*
- * Copyright 2017 Phil Shadlyn
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+
 
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
 
+// Only apply the google-service plugin if the config file exists
+if (file('google-services.json').exists()) {
+    apply plugin: 'com.google.gms.google-services'
+}
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 24
     buildToolsVersion '26.0.2'
+    flavorDimensions "default"
 
     signingConfigs {
         release {
@@ -37,11 +27,11 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.physphil.android.unitconverterultimate"
+        applicationId 'Converter'
         minSdkVersion 14
-        targetSdkVersion 27
-        versionCode 50300
-        versionName '5.3'
+        targetSdkVersion 24
+        versionCode 50200
+        versionName '5.2'
     }
 
 
@@ -54,43 +44,29 @@ android {
         }
     }
 
-    flavorDimensions "distribution"
-
     productFlavors {
         base {
             // Basic build
-            dimension "distribution"
         }
         google {
             // Adds the option to donate to the developer
             // Adds Firebase crash analytics
-            dimension "distribution"
         }
     }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support:recyclerview-v7:27.0.2'
-    implementation 'com.android.support:design:27.0.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
-    implementation 'com.google.code.gson:gson:2.8.0'
-    implementation 'io.reactivex:rxandroid:1.2.1'
-    implementation 'io.reactivex:rxjava:1.3.0'
-
-    googleImplementation 'com.google.firebase:firebase-crash:11.8.0'
-
-    debugImplementation 'com.facebook.stetho:stetho:1.5.0'
-
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:1.9.0'
-}
-
-// According to setup, this needs to be at bottom of file - https://firebase.google.com/docs/android/setup
-// Only apply the google-service plugin if the config file exists.
-if (file('google-services.json').exists()) {
-    apply plugin: 'com.google.gms.google-services'
+    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:recyclerview-v7:24.2.0'
+    compile 'com.android.support:design:24.2.0'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.2.3'
+    googleCompile 'com.google.firebase:firebase-crash:10.2.1'
+    debugCompile 'com.facebook.stetho:stetho:1.1.1'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.9.0'
 }
